# kivy-stonks-app

./: .gitignore  README.md  app_util.py  dashboard_tab.py  main.py  pyproject.toml  store.json  ticker_widget.py
