[tool.poetry]
name = "kivy-stonks-app"
version = "0.1.0"
description = ""
authors = ["Bohdan <brodskyy.b@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
plotly = "^4.14.3"
yfinance = "^0.1.55"
Kivy = "^2.0.0"
kivymd = "^0.104.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
